    arguments are lexically rebound. (thanks to Gerd Moellmann and
    Pierre Mai)
  * fixed bug 194: error messages are now more informative when there
    is no primary method applicable in a call to a generic
    function. (thanks to Gerd Moellmann)
  * fixed bug in command line argument checking (thanks to Julian
    Fondren)
  * fixed bug in COUNT-IF, making it handle :FROM-END correctly
    (thanks to Matthew Danish)
  * incremented fasl file version number, because of the
    SXHASH-related changes in the layout of CLOS data structures

changes in sbcl-0.7.11 relative to sbcl-0.7.10:
  * fixed some more bugs revealed by Paul Dietz' test suite:
    ** As required by ANSI, LOOP now disallows anonymous collection
       clauses such as COLLECT I in conjunction with aggregate boolean
       clauses such as THEREIS (= I 1);
    ** LOOP now signals an error when any variable is reused in the
       same loop (including the potentially useful construct analogous
       to WITH A = 1 WITH A = (1+ A);
    ** IT is only a special loop symbol within the first clause of a
       conditional loop clause;

planned incompatible changes in 0.7.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are
    using profiling. If you never profile anything, TRACE should
    continue to behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.