@@ -177,19 +177,22 @@
   (dolist (dsd (dd-slots dd))
     (/show0 "doing FDEFINITION for slot accessor")
     (let ((accessor-name (dsd-accessor-name dsd)))
-      (/show0 "ACCESSOR-NAME=..")
-      (/hexstr accessor-name)
-      (protect-cl accessor-name)
-      (/hexstr "getting READER-FUN and WRITER-FUN")
-      (multiple-value-bind (reader-fun writer-fun) (slot-accessor-funs dd dsd)
-	(declare (type function reader-fun writer-fun))
-	(/show0 "got READER-FUN and WRITER-FUN=..")
-	(/hexstr reader-fun)
-	(setf (symbol-function accessor-name) reader-fun)
-	(unless (dsd-read-only dsd)
-	  (/show0 "setting FDEFINITION for WRITER-FUN=..")
-	  (/hexstr writer-fun)
-	  (setf (fdefinition `(setf ,accessor-name)) writer-fun)))))
+      ;; We mustn't step on any inherited accessors
+      (unless (accessor-inherited-data accessor-name dd)
+	(/show0 "ACCESSOR-NAME=..")
+	(/hexstr accessor-name)
+	(protect-cl accessor-name)
+	(/hexstr "getting READER-FUN and WRITER-FUN")
+	(multiple-value-bind (reader-fun writer-fun)
+	    (slot-accessor-funs dd dsd)
+	  (declare (type function reader-fun writer-fun))
+	  (/show0 "got READER-FUN and WRITER-FUN=..")
+	  (/hexstr reader-fun)
+	  (setf (symbol-function accessor-name) reader-fun)
+	  (unless (dsd-read-only dsd)
+	    (/show0 "setting FDEFINITION for WRITER-FUN=..")
+	    (/hexstr writer-fun)
+	    (setf (fdefinition `(setf ,accessor-name)) writer-fun))))))
 
   ;; Set FDEFINITION for copier.
   (when (dd-copier-name dd)
