@@ -1432,6 +1432,10 @@ changes in sbcl-0.7.10 relative to sbcl-0.7.9:
     SXHASH-related changes in the layout of CLOS data structures
 
 changes in sbcl-0.7.11 relative to sbcl-0.7.10:
+  * fixed bug 127: DEFSTRUCT now does not clobber old structure
+    accessors that are related by inheritance, as specified in the
+    :CONC-NAME section of the specification of DEFSTRUCT.  (thanks to
+    Valtteri Vuorikoski)
   * fixed some more bugs revealed by Paul Dietz' test suite:
     ** As required by ANSI, LOOP now disallows anonymous collection
        clauses such as COLLECT I in conjunction with aggregate boolean
@@ -1441,6 +1445,8 @@ changes in sbcl-0.7.11 relative to sbcl-0.7.10:
        to WITH A = 1 WITH A = (1+ A);
     ** IT is only a special loop symbol within the first clause of a
        conditional loop clause;
+  * incremented fasl file version number, because of the incompatible
+    change to the DEFSTRUCT-DESCRIPTION structure.
 
 planned incompatible changes in 0.7.x:
   * (not done yet, but planned:) When the profiling interface settles
